fixed lecturer page edit module modal. now more responsive, but the blue add button is abit out of place.. dunno how to fix

--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,21 @@ textarea {
     text-align: right;
 }
 
+.addProjectTitleBtn {
+    border-radius: 50%;
+    z-index: 1000;
+}
+
+#projectTitleOrig {
+    display:none;
+}
+
+.projectTitleInput input {
+    max-width: 80%;
+    width: auto;
+    display: inline-block;
+}
+
 /* END LECTUERER CONSOLE */
 
 /*-----------------------*/
@@ -509,14 +524,10 @@ textarea {
 }
 
 .deleteProjectBtn {
-    position: absolute;
+    /*position: absolute;
     top: -43px;
     left: 322px;
-    display: none;
-}
-
-.projectTitleInput:hover .deleteProjectBtn {
-    display: initial;
+    display: none;*/
 }
 
 /* admin login */
